--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,19 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-size: 10px;
+	font-family: sans-serif;
+	font-family: 'DMSans', Arial, Serif;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+	font-size: 10px;
+	overflow-x: hidden;
+	max-width: 100%;
+	background-color: #202b30;
+	width: 100%;
+	/* Prevents inconsistencies between window.innerWidth and media queries caused by scrollbar width */
+	/* Since the scrollbar is not a child of the body and window.innerWidth excludes it, this solution works. However, in Safari, media queries and responsive layouts may be off by approximately 15px due to the scrollbar width. */
+	overflow-y: scroll;
+	/* Always show scrollbar to prevent shifting of content */
 }
