--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -58,3 +58,52 @@
 	font-weight: 900;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Inconsolata';
+	src: url(./Inconsolata/Inconsolata-ExtraLight.ttf);
+	font-weight: 200;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Inconsolata';
+	src: url(./Inconsolata/Inconsolata-Light.ttf);
+	font-weight: 300;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Inconsolata';
+	src: url(./Inconsolata/Inconsolata-Regular.ttf);
+	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Inconsolata';
+	src: url(./Inconsolata/Inconsolata-Medium.ttf);
+	font-weight: 500;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Inconsolata';
+	src: url(./Inconsolata/Inconsolata-SemiBold.ttf);
+	font-weight: 600;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Inconsolata';
+	src: url(./Inconsolata/Inconsolata-Bold.ttf);
+	font-weight: 700;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Inconsolata';
+	src: url(./Inconsolata/Inconsolata-ExtraBold.ttf);
+	font-weight: 800;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Inconsolata';
+	src: url(./Inconsolata/Inconsolata-Black.ttf);
+	font-weight: 900;
+	font-style: normal;
+}
